# multiplex_blast_search

./: LICENSE  README.md  primers.txt  requirements.txt  setup.cfg
multiplex_blast_search/: __main__.py  primer_specificity_blast.py  primer_specificity_blast_code.py
