[metadata]
name = multiplex_blast_search
author = Serena Aneli
author_email = serena.aneli@unito.it
url = https://github.com/serena-aneli/multiplex_blast_search/
description = estimation of recombination rates between short tandem repeats (STRs) or other polymorphisms (SNP/indels) along the X chromosome
version = 1.1.1
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
python_requires = >=3.7
packages = find:
install_requires =
    numpy >= 1.15.4
    pandas >= 0.23.4
    openpyxl==3.1.2
    biopython==1.81
[options.extras_require]
PLOT =
    matplotlib >= 3.0.0

[options.entry_points]
console_scripts =
    multiplex_blast_search = multiplex_blast_search.cli:main
